[package]
name = "midhammer-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
reqwest = "0.11.23"
tokio = { version = "1", features = ["full"] }
tauri = { version = "^1.5.4", features = ["shell-open"] }
lazy_static = "1.4.0"
serde_json = "1.0.108"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[unstable]
never_type = true
lazy_static = true
error_generic_member_access = true
